// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getItems should return all entry-items 1`] = `
Array [
  Object {
    "details": Array [],
    "id": 0,
    "message": "foo-message",
    "related": Array [
      Object {
        "id": "foo-foo-module",
        "type": "module",
      },
      Object {
        "id": "foo-foo-entry",
        "type": "entry",
      },
    ],
    "rule": "foo-rule",
    "type": "error",
  },
  Object {
    "details": Array [],
    "id": 1,
    "message": "bar-message",
    "related": Array [
      Object {
        "id": "foo-foo-module",
        "type": "module",
      },
      Object {
        "id": "foo-bar-module",
        "type": "module",
      },
      Object {
        "id": "foo-foo-entry",
        "type": "entry",
      },
      Object {
        "id": "foo-bar-entry",
        "type": "entry",
      },
    ],
    "rule": "foo-rule",
    "type": "warn",
  },
]
`;

exports[`getItems should return all entry-items 2`] = `
Array [
  Object {
    "details": Array [],
    "id": 2,
    "message": "bar-message",
    "related": Array [
      Object {
        "id": "bar-foo-module",
        "type": "module",
      },
      Object {
        "id": "bar-bar-module",
        "type": "module",
      },
      Object {
        "id": "bar-foo-entry",
        "type": "entry",
      },
      Object {
        "id": "bar-bar-entry",
        "type": "entry",
      },
    ],
    "rule": "foo-rule",
    "type": "error",
  },
]
`;

exports[`getItems should return all items 1`] = `
Array [
  Object {
    "details": Array [],
    "id": 0,
    "message": "foo-message",
    "related": Array [
      Object {
        "id": "foo-foo-module",
        "type": "module",
      },
      Object {
        "id": "foo-foo-entry",
        "type": "entry",
      },
    ],
    "rule": "foo-rule",
    "type": "error",
  },
  Object {
    "details": Array [],
    "id": 1,
    "message": "bar-message",
    "related": Array [
      Object {
        "id": "foo-foo-module",
        "type": "module",
      },
      Object {
        "id": "foo-bar-module",
        "type": "module",
      },
      Object {
        "id": "foo-foo-entry",
        "type": "entry",
      },
      Object {
        "id": "foo-bar-entry",
        "type": "entry",
      },
    ],
    "rule": "foo-rule",
    "type": "warn",
  },
]
`;

exports[`getItems should return all items 2`] = `
Array [
  Object {
    "details": Array [],
    "id": 2,
    "message": "bar-message",
    "related": Array [
      Object {
        "id": "bar-foo-module",
        "type": "module",
      },
      Object {
        "id": "bar-bar-module",
        "type": "module",
      },
      Object {
        "id": "bar-foo-entry",
        "type": "entry",
      },
      Object {
        "id": "bar-bar-entry",
        "type": "entry",
      },
    ],
    "rule": "foo-rule",
    "type": "error",
  },
]
`;

exports[`getItems should return all module-items 1`] = `
Array [
  Object {
    "details": Array [],
    "id": 0,
    "message": "foo-message",
    "related": Array [
      Object {
        "id": "foo-foo-module",
        "type": "module",
      },
      Object {
        "id": "foo-foo-entry",
        "type": "entry",
      },
    ],
    "rule": "foo-rule",
    "type": "error",
  },
  Object {
    "details": Array [],
    "id": 1,
    "message": "bar-message",
    "related": Array [
      Object {
        "id": "foo-foo-module",
        "type": "module",
      },
      Object {
        "id": "foo-bar-module",
        "type": "module",
      },
      Object {
        "id": "foo-foo-entry",
        "type": "entry",
      },
      Object {
        "id": "foo-bar-entry",
        "type": "entry",
      },
    ],
    "rule": "foo-rule",
    "type": "warn",
  },
]
`;

exports[`getItems should return all module-items 2`] = `
Array [
  Object {
    "details": Array [],
    "id": 2,
    "message": "bar-message",
    "related": Array [
      Object {
        "id": "bar-foo-module",
        "type": "module",
      },
      Object {
        "id": "bar-bar-module",
        "type": "module",
      },
      Object {
        "id": "bar-foo-entry",
        "type": "entry",
      },
      Object {
        "id": "bar-bar-entry",
        "type": "entry",
      },
    ],
    "rule": "foo-rule",
    "type": "error",
  },
]
`;

exports[`getItems should return entry-item with specific id 1`] = `
Array [
  Object {
    "details": Array [],
    "id": 0,
    "message": "foo-message",
    "related": Array [
      Object {
        "id": "foo-foo-module",
        "type": "module",
      },
      Object {
        "id": "foo-foo-entry",
        "type": "entry",
      },
    ],
    "rule": "foo-rule",
    "type": "error",
  },
  Object {
    "details": Array [],
    "id": 1,
    "message": "bar-message",
    "related": Array [
      Object {
        "id": "foo-foo-module",
        "type": "module",
      },
      Object {
        "id": "foo-bar-module",
        "type": "module",
      },
      Object {
        "id": "foo-foo-entry",
        "type": "entry",
      },
      Object {
        "id": "foo-bar-entry",
        "type": "entry",
      },
    ],
    "rule": "foo-rule",
    "type": "warn",
  },
]
`;

exports[`getItems should return entry-item with specific id 2`] = `
Array [
  Object {
    "details": Array [],
    "id": 2,
    "message": "bar-message",
    "related": Array [
      Object {
        "id": "bar-foo-module",
        "type": "module",
      },
      Object {
        "id": "bar-bar-module",
        "type": "module",
      },
      Object {
        "id": "bar-foo-entry",
        "type": "entry",
      },
      Object {
        "id": "bar-bar-entry",
        "type": "entry",
      },
    ],
    "rule": "foo-rule",
    "type": "error",
  },
]
`;

exports[`getItems should return module-item with specific id 1`] = `
Array [
  Object {
    "details": Array [],
    "id": 0,
    "message": "foo-message",
    "related": Array [
      Object {
        "id": "foo-foo-module",
        "type": "module",
      },
      Object {
        "id": "foo-foo-entry",
        "type": "entry",
      },
    ],
    "rule": "foo-rule",
    "type": "error",
  },
  Object {
    "details": Array [],
    "id": 1,
    "message": "bar-message",
    "related": Array [
      Object {
        "id": "foo-foo-module",
        "type": "module",
      },
      Object {
        "id": "foo-bar-module",
        "type": "module",
      },
      Object {
        "id": "foo-foo-entry",
        "type": "entry",
      },
      Object {
        "id": "foo-bar-entry",
        "type": "entry",
      },
    ],
    "rule": "foo-rule",
    "type": "warn",
  },
]
`;

exports[`getItems should return module-item with specific id 2`] = `
Array [
  Object {
    "details": Array [],
    "id": 1,
    "message": "bar-message",
    "related": Array [
      Object {
        "id": "foo-foo-module",
        "type": "module",
      },
      Object {
        "id": "foo-bar-module",
        "type": "module",
      },
      Object {
        "id": "foo-foo-entry",
        "type": "entry",
      },
      Object {
        "id": "foo-bar-entry",
        "type": "entry",
      },
    ],
    "rule": "foo-rule",
    "type": "warn",
  },
]
`;

exports[`getItems should return module-item with specific id 3`] = `
Array [
  Object {
    "details": Array [],
    "id": 2,
    "message": "bar-message",
    "related": Array [
      Object {
        "id": "bar-foo-module",
        "type": "module",
      },
      Object {
        "id": "bar-bar-module",
        "type": "module",
      },
      Object {
        "id": "bar-foo-entry",
        "type": "entry",
      },
      Object {
        "id": "bar-bar-entry",
        "type": "entry",
      },
    ],
    "rule": "foo-rule",
    "type": "error",
  },
]
`;
